# geek-tools

./: .gitignore  README.md
Wonder-write-r/: Cargo.toml  README.md
Wonder-write-r/.opencode/agents/: wonder-write-r-operator.md
Wonder-write-r/.opencode/commands/: wonder-write-r.md
Wonder-write-r/.opencode/tools/: fast_apply_r.js  fast_write_r.js  package.json  wonder_write_r_runner.js
Wonder-write-r/release/: wonder-write-r-x86_64-pc-windows-gnu.zip.sha256
Wonder-write-r/scripts/: package-release.sh
Wonder-write-r/src/: cli.rs  core.rs  json.rs  lib.rs  main.rs  sha256.rs  workspace.rs
Wonder-write-r/src/core/: apply.rs  error.rs  git.rs  response.rs  write.rs
Wonder-write-r/tests/: cli_contract.rs
opencode/: INSTALLATION.md  MANIFEST.json  install-opencode-write-json-repair.ps1  verify-package.sh
opencode/codegraph/impl/: MANIFEST.json  README.md  install-opencode-codegraph.ps1  opencode.json
opencode/estimate/: MANIFEST.json  README.md
opencode/estimate/.opencode/agents/: estimate-estimator.md  estimate-reviewer.md  estimate-worker.md
opencode/estimate/.opencode/commands/: estimate-doctor.md  estimate-feature-duration.md  estimate-offline-bundle.md  estimate.md
opencode/estimate/.opencode/estimate/: README.md  THIRD-PARTY-NOTICES.md  install.md
opencode/estimate/.opencode/tools/: wonder_estimate_cli.js  (+17 more)
opencode/fix/: INSTALLATION.md  MANIFEST.json  verify-installer.ps1  verify-package.sh
opencode/fix/patches/: README.md  opencode-write-json-repair.patch
opencode/openwrite/: MANIFEST.json  README.md
opencode/patches/: README.md
(+75 files in other folders)
